recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.error
HexaKoch:20: error: not found: value drawCurve
		drawCurve(getParam(0).asInstanceOf[Int],getParam(1).asInstanceOf[Double]);
                ^