recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.code
def hexaKoch(levels:Int, length:Double) {
  if (levels!=0) {
  	hexaKoch(levels-1,length*0.14)
  	gauche(120)
    for (i <-1 to 4) {
      hexaKoch(levels-1,length*0.14)
  		droite(60)
    }
    hexaKoch(levels-1,length*0.14)
    gauche(120)
    hexaKoch(levels-1,length*0.14)
  }
  else {
    avance(length)
  }
}